Refactor: separate handlers directory
