# docs/swagger.json
@@ -36,7 +36,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entities.CreateShortURLRequest"
+                            "$ref": "#/definitions/rest.CreateShortURLRequest"
                         }
                     }
                 ],
@@ -44,19 +44,19 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/entities.ShortURLResponseSuccess"
+                            "$ref": "#/definitions/rest.ShortURLResponseSuccess"
                         }
                     },
                     "400": {
                         "description": "Bad Request",
                         "schema": {
-                            "$ref": "#/definitions/entities.ShortURLResponseError"
+                            "$ref": "#/definitions/rest.ErrorResponse"
                         }
                     },
                     "500": {
                         "description": "Internal Server Error",
                         "schema": {
-                            "$ref": "#/definitions/entities.ShortURLResponseError"
+                            "$ref": "#/definitions/rest.ErrorResponse"
                         }
                     }
                 }
@@ -64,7 +64,7 @@
         }
     },
     "definitions": {
-        "entities.CreateShortURLRequest": {
+        "rest.CreateShortURLRequest": {
             "type": "object",
             "required": [
                 "original_url"
@@ -85,7 +85,26 @@
                 }
             }
         },
-        "entities.CreateShortURLResponse": {
+        "rest.ErrorResponse": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string"
+                },
+                "request_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "rest.ShortURLResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/rest.createShortURLResponse"
+                }
+            }
+        },
+        "rest.createShortURLResponse": {
             "type": "object",
             "properties": {
                 "expires": {
@@ -96,22 +115,6 @@
                 },
                 "url": {
                     "type": "string"
-                }
-            }
-        },
-        "entities.ShortURLResponseError": {
-            "type": "object",
-            "properties": {
-                "error": {
-                    "type": "string"
-                }
-            }
-        },
-        "entities.ShortURLResponseSuccess": {
-            "type": "object",
-            "properties": {
-                "data": {
-                    "$ref": "#/definitions/entities.CreateShortURLResponse"
                 }
             }
         }
