# internal/adapters/handlers/rest/shorturl_responses.go
@@ -1,0 +1,11 @@
+package rest
+
+type createShortURLResponse struct {
+	URL      string `json:"url"`
+	ShortURL string `json:"short_url"`
+	Expires  string `json:"expires"`
+}
+
+type ShortURLResponseSuccess struct {
+	Data createShortURLResponse `json:"data"`
+}
